chore(ui): experimental build with esbuild

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -c development",
+    "experimental": "ng serve -c experimental",
     "test": "ng test --watch false --code-coverage",
     "e2e": "testcafe chromium:headless ./e2e/tests/* -S -s screenshots",
     "doc": "./node_modules/.bin/compodoc -p tsconfig.json -s",
@@ -34,7 +35,7 @@
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/router": "16.2.12",
     "@babel/runtime": "7.23.2",
-    "@fontsource/lato": "4.5.0",
+    "@fontsource/lato": "5.0.18",
     "@icholy/duration": "5.0.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
@@ -72,7 +73,6 @@
     "monaco-editor-webpack-plugin": "7.1.0",
     "ng-event-source": "1.0.14",
     "ng-zorro-antd": "16.2.2",
-    "ng2-codemirror-typescript": "3.13.1",
     "ng2-completer": "2.0.8",
     "ng2-dragula": "5.0.1",
     "ngx-clipboard": "16.0.0",
@@ -84,7 +84,7 @@
     "raven-js": "3.27.2",
     "rxjs": "6.5.5",
     "rxjs-compat": "6.3.3",
-    "sanitize-html": "2.3.2",
+    "sanitize-html": "2.11.0",
     "spinkit": "2.0.1",
     "string-format-obj": "1.1.1",
     "ts-helpers": "1.1.2",
@@ -114,7 +114,7 @@
     "@types/jasminewd2": "2.0.8",
     "@types/lodash-es": "4.17.3",
     "@types/node": "18.18.10",
-    "@types/sanitize-html": "2.3.1",
+    "@types/sanitize-html": "2.9.5",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "@typescript-eslint/typescript-estree": "5.17.0",
