--- a/ui/angular.json
+++ b/ui/angular.json
@@ -23,6 +23,11 @@
               "src/assets",
               "src/favicon.ico",
               {
+                "glob": "*",
+                "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              },
+              {
                 "glob": "ng-zorro-antd.dark.min.css",
                 "input": "./node_modules/ng-zorro-antd",
                 "output": "/assets/"
@@ -34,6 +39,11 @@
               }
             ],
             "styles": [
+              {
+                "input": "src/ngzorro.dark.less",
+                "bundleName": "ngzorro.dark",
+                "inject": false
+              },
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "node_modules/dragula/dist/dragula.css",
               "node_modules/codemirror/lib/codemirror.css",
@@ -229,6 +239,11 @@
               "src/assets",
               "src/favicon.ico",
               {
+                "glob": "*",
+                "input": "node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              },
+              {
                 "glob": "ng-zorro-antd.dark.min.css",
                 "input": "./node_modules/ng-zorro-antd",
                 "output": "/assets/"
@@ -240,6 +255,11 @@
               }
             ],
             "styles": [
+              {
+                "input": "src/ngzorro.dark.less",
+                "bundleName": "ngzorro.dark",
+                "inject": false
+              },
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "node_modules/dragula/dist/dragula.css",
               "node_modules/codemirror/lib/codemirror.css",
