--- a/tests/08_v2_cli_secret.yml
+++ b/tests/08_v2_cli_secret.yml
@@ -18,15 +18,15 @@ testcases:
 
 - name: add new secret
   steps:
-  - script: {{.input.cdsctl_command}} experimental project secret add ITV2CLISECRET mySecretName myValue
+  - script: "{{.input.cdsctl_command}} experimental project secret add ITV2CLISECRET mySecretName myValue"
 
 - name: list secrets
   steps:
-    - script: {{.input.cdsctl_command}} experimental project secret list ITV2CLISECRET --format json
+    - script: "{{.input.cdsctl_command}} experimental project secret list ITV2CLISECRET --format json"
       assertions:
         - result.code ShouldEqual 0
         - result.systemout ShouldContainSubstring "mySecretName"
 
 - name: remove secret
   steps:
-    - script: {{.input.cdsctl_command}} experimental project secret delete ITV2CLISECRET mySecretName --force
+    - script: "{{.input.cdsctl_command}} experimental project secret delete ITV2CLISECRET mySecretName --force"
