--- a/tests/08_v2_cli_secret.yml
+++ b/tests/08_v2_cli_secret.yml
@@ -4,29 +4,29 @@ vars:
 testcases:
 - name: create project
   steps:
-  - script: "{{.input.cdsctl_command}} user me --format json"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} user me --format json"
     vars:
       cds_user:
         from: result.systemoutjson
-  - script: "{{.input.cdsctl_command}} project remove --force {{.input.cds_project}}"
-  - script: "{{.input.cdsctl_command}} group remove --force {{.input.cds_project}}"
-  - script: "{{.input.cdsctl_command}} group add {{.input.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} project remove --force {{.input.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group remove --force {{.input.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group add {{.input.cds_project}}"
 
   # Create the project
   - script: >
-      {{.input.cdsctl_command}} project create {{.input.cds_project}} "Test Project {{.input.cds_project}}" {{.input.cds_project}}
+      {{.cdsctl}} -f {{.cdsctl.config}} project create {{.input.cds_project}} "Test Project {{.input.cds_project}}" {{.input.cds_project}}
 
 - name: add new secret
   steps:
-  - script: "{{.input.cdsctl_command}} experimental project secret add ITV2CLISECRET mySecretName myValue"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret add ITV2CLISECRET mySecretName myValue"
 
 - name: list secrets
   steps:
-    - script: "{{.input.cdsctl_command}} experimental project secret list ITV2CLISECRET --format json"
+    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret list ITV2CLISECRET --format json"
       assertions:
         - result.code ShouldEqual 0
         - result.systemout ShouldContainSubstring "mySecretName"
 
 - name: remove secret
   steps:
-    - script: "{{.input.cdsctl_command}} experimental project secret delete ITV2CLISECRET mySecretName --force"
+    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret delete ITV2CLISECRET mySecretName --force"
