--- a/tests/08_v2_cli_secret.yml
+++ b/tests/08_v2_cli_secret.yml
@@ -8,25 +8,25 @@ testcases:
     vars:
       cds_user:
         from: result.systemoutjson
-  - script: "{{.cdsctl}} -f {{.cdsctl.config}} project remove --force {{.input.cds_project}}"
-  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group remove --force {{.input.cds_project}}"
-  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group add {{.input.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} project remove --force {{.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group remove --force {{.cds_project}}"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} group add {{.cds_project}}"
 
   # Create the project
   - script: >
-      {{.cdsctl}} -f {{.cdsctl.config}} project create {{.input.cds_project}} "Test Project {{.input.cds_project}}" {{.input.cds_project}}
+      {{.cdsctl}} -f {{.cdsctl.config}} project create {{.cds_project}} "Test Project {{.cds_project}}" {{.cds_project}}
 
 - name: add new secret
   steps:
-  - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret add ITV2CLISECRET mySecretName myValue"
+  - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret add {{.cds_project}} mySecretName myValue"
 
 - name: list secrets
   steps:
-    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret list ITV2CLISECRET --format json"
+    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret list {{.cds_project}} --format json"
       assertions:
         - result.code ShouldEqual 0
         - result.systemout ShouldContainSubstring "mySecretName"
 
 - name: remove secret
   steps:
-    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret delete ITV2CLISECRET mySecretName --force"
+    - script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project secret delete {{.cds_project}} mySecretName --force"
