--- a/tests/08_v2_cli_organization.yml
+++ b/tests/08_v2_cli_organization.yml
@@ -17,7 +17,7 @@ testcases:
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental organization list --format json
       assertions:
         - result.code ShouldEqual 0
-        - result.systemoutjson.__len__ ShouldEqual 2
+        - result.systemoutjson ShouldHaveLength 2
 
 - name: remove organization
   steps:
