--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -177,6 +177,8 @@ testcases:
     info: "hook event {{.value.uuid}} ({{.value.created}} - {{.result.systemoutjson.last_error}}) status is {{.result.systemoutjson.status}}"
     assertions:
     - result.systemoutjson.status ShouldEqual Done
+    retry: 10
+    delay: 10
 
   - name: Check that the CDS workflow has at least one execution and is Success
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow status {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA 1 --format json"
