--- a/tests/08_v2_checkout.yml
+++ b/tests/08_v2_checkout.yml
@@ -72,12 +72,18 @@ testcases:
                     #!/bin/bash -x
                     env | grep GIT        
 
+    - name: Trigger manually an analysis
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis trigger {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
+      assertions:
+        - result.systemoutjson.status ShouldEqual "InProgress"
+
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
-        - result.systemoutjson ShouldHaveLength 2
+        - result.systemoutjson ShouldHaveLength 3
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
         - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
+        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"
       retry: 10
       delay: 12
 
