feat(api): add variableset in workflows (#6809)

--- a/tests/08_v2_env_context.yml
+++ b/tests/08_v2_env_context.yml
@@ -29,6 +29,10 @@ testcases:
       git_user: "{{.git.user}}"
       git_password: "{{.git.password}}"
       git_repo: "{{.git_repo}}"
+    - name: Create variable set item var1
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 var1 '{\"key\": \"value\"}' string --force"
+    - name: Create variable set item secret
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 varSecret myLongSecret secret"
 
     - type: v2_install_gpg_key
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
@@ -63,6 +67,7 @@ testcases:
             foo: barWorkflow
           jobs:
             overrideEnv:
+              vars: [varset1]
               runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
               env:
                 foo: barJob
@@ -75,6 +80,10 @@ testcases:
                   id: jobEnv
                 - run: "echo $CDS_WORKFLOW"
                   id: globEnv
+                - run: "echo ${{ vars.varset1.var1.key }}" 
+                  id: stringVar
+                - run: "echo ${{ vars.varset1.varSecret }}" 
+                  id: secretVar 
             init:
               runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
               steps:
@@ -109,3 +118,7 @@ testcases:
       script: "cat {{.cds_workflow}}-1-1-overrideEnv-stepEnv | grep \"barStep\""
     - name: Check globEnv log content
       script: "cat {{.cds_workflow}}-1-1-overrideEnv-globEnv | grep \"{{.cds_workflow}}\""
+    - name: Check stringVar log content
+      script: "cat {{.cds_workflow}}-1-1-overrideEnv-stringVar && cat {{.cds_workflow}}-1-1-overrideEnv-stringVar | grep \"value\""  
+    - name: Check secretVar log content
+      script: "cat {{.cds_workflow}}-1-1-overrideEnv-secretVar && cat {{.cds_workflow}}-1-1-overrideEnv-secretVar | grep \"**********\""    
