--- a/contrib/grpcplugins/action/docker-push/docker-push.yml
+++ b/contrib/grpcplugins/action/docker-push/docker-push.yml
@@ -2,7 +2,7 @@ name: docker-push
 type: action
 author: "François SAMIN <francois.samin@corp.ovh.com>"
 description: |
-  This push Docker image
+  This pushes Docker image
 inputs:
   image:
     type: string
