feat(api,cli): manual analysis trigger + list rbac (#6814)

--- a/tests/08_v2_cli_rbac.yml
+++ b/tests/08_v2_cli_rbac.yml
@@ -2,7 +2,7 @@ name: RBAC Command Line TestSuite
 testcases:
 - name: prepare test
   steps:
-  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental region remove my-region --force
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac remove perm-global-test --force
 
 - name: add new permission
   steps:
@@ -15,8 +15,15 @@ testcases:
         - result.code ShouldEqual 0
         - result.systemoutjson.name ShouldEqual "perm-global-test"
 
+- name: list permission
+  steps:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac list --format json
+    assertions:
+        - result.code ShouldEqual 0
+        - result.systemout ShouldContainSubstring "perm-global-test"
+
 - name: delete permission
   steps:
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-test --force
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental rbac delete perm-global-test --force
       assertions:
         - result.code ShouldEqual 0
